funland/media/jellyfin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  namespace: media
  labels:
    app.kubernetes.io/name: jellyfin
    app.kubernetes.io/instance: jellyfin
    # renovate: image=jellyfin/jellyfin
    app.kubernetes.io/version: "10.11.11"
    app.kubernetes.io/component: media-server
    app.kubernetes.io/part-of: homelab
    app.kubernetes.io/managed-by: argocd
spec:
  selector:
    app.kubernetes.io/name: jellyfin
    app.kubernetes.io/instance: jellyfin
  ports:
  - protocol: TCP
    name: "jellyfin"
    port: 8096
    targetPort: 8096
  type: ClusterIP
